Fixed button-list wrap issue.

--- a/content/stylesheets/foundation/_lists.scss
+++ b/content/stylesheets/foundation/_lists.scss
@@ -13,6 +13,7 @@
 
 div.button-list {
     display:    inline-table;
+    width:      100%;
 
     ul.button-list-items {
         @include    button-list;
